# wasm-mcp-sandbox

./: Cargo.toml  README.md  math_algo.rs
src/: main.rs  sandbox.rs
tools/: math_algo.wasm
